# python

extract_cid2unicode/: _jjan_20.json  extract_cid2unicode.py  test.json
pdfminer_custom/: pyproject.toml
pdfminer_custom/src/pdfminer_custom/: MyPDFFont.py  __init__.py  _saslprep.py  casting.py  ccitt.py  cmapdb.py  converter.py  data_structures.py  encodingdb.py  glyphlist.py  high_level.py  image.py  jbig2.py  layout.py  pdfcolor.py  pdfdevice.py  pdfdocument.py  pdfexceptions.py  pdffont.py  pdfinterp.py  pdfpage.py  pdfparser.py  pdftypes.py  psparser.py  setup.py  utils.py
pdfminer_custom/src/pdfminer_custom.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pdfminer_custom/src/pdfminer_custom/pdfminer_custom.egg-info/: PKG-INFO  SOURCES.txt
py-hanspell/hanspell/: spell_checker.py
to_report/: to_report.py
to_report/output/: report_diff_20260303-072201.csv  report_diff_20260323-100515.csv  report_diff_20260423-113805.csv  report_tr_20260302-183329.csv  report_tr_20260323-100515.csv  report_tr_20260422-091645.csv  report_tr_20260423-113805.csv
xe_lib/: pyproject.toml
xe_lib/src/: xfile.py  xjson.py  xutil.py
xe_lib/src/xe_lib.egg-info/: PKG-INFO  SOURCES.txt
